# AutoResearcher

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  cloudbuild.yaml  context.md  pyproject.toml  requirements.txt
agents/: summarizer.py
autoresearcher/: README.md  requirements.txt
autoresearcher/agents/: orchestrator.py  summarizer.py  synthesizer.py
autoresearcher/configs/: default.yaml
autoresearcher/evaluation/: metrics.py  run_eval.py
autoresearcher/retrieval/: hybrid_retrieval.py  kg_ingest.py  kg_query.py  vector_store.py
autoresearcher/scripts/: download_pubmed.py  train_summarizer_lora.py  train_synthesizer_lora.py
notebooks/: 00_autoresearcher_colab.ipynb
retrieval/: kg_ingest.py  kg_query.py
scripts/: download_pubmed.py
src/: test_langchain_agents.py  test_loaders_chunking.py  test_training_pipeline.py  test_vertex_faiss.py
src/autoresearcher/agents/: base_agent.py  langchain_agent_manager.py  langchain_summarizer_agent.py  langchain_synthesizer_agent.py  orchestrator.py  summarizer.py  synthesizer.py
src/autoresearcher/api/: __init__.py  main.py
src/autoresearcher/config/: gcp_config.py  settings.py
src/autoresearcher/core/: models.py  settings.py
src/autoresearcher/data/: chunking.py  pubmed-2.xml  pubmed-example.xml
src/autoresearcher/data/embedders/: embedding_pipeline.py
src/autoresearcher/data/loaders/: base_loader.py  cord19_loader.py  pmc_loader.py  pubmed_loader.py
src/autoresearcher/data/processors/: document_processor.py
src/autoresearcher/embeddings/: embedding_pipeline.py  faiss_index.py  vertex_embeddings.py
src/autoresearcher/llm/: llm_manager.py
src/autoresearcher/pipelines/: training_pipeline.py
src/autoresearcher/retrieval/: hybrid_retrieval.py  kg_ingest.py  kg_query.py  vector_store.py
src/autoresearcher/scripts/: build_index.py  download_pubmed.py  train_summarizer_lora.py
src/autoresearcher/training/: data_formats.py  dataset_builder.py  evaluation.py  training_config.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_embedding_pipeline.py  test_embeddings.py  test_loader_processor.py  test_loaders.py
tests/data/: sample_cord19.json  sample_pmc.xml
