[tool.poetry]
name = "autoresearcher"
version = "0.1.0"
description = "A FastAPI-based research automation service."
authors = ["sdv1708 <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.10.1"
pydantic = "^2.11.7"
transformers = "^4.54.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
